--- a/data/tabular/uniprot/meta.yaml
+++ b/data/tabular/uniprot/meta.yaml
@@ -6,11 +6,12 @@ targets:
     - id: sentences
       description: sentences describing the catalytic activity of a protein
       names:
-        - noun : catalytic activity
+          - noun: catalytic activity
     - id: reactions
       description: biochemical reactions catalyzed by a protein
       names:
-        - noun : chemical reactions
+          - noun: chemical reactions
+          - noun: biochemical reactions
 identifiers:
     - id: sequence
       type: sequence
@@ -22,7 +23,7 @@ links:
 num_points: 542630
 bibtex:
     - |-
-    @article{10.1093/nar/gkac1052,
+      @article{10.1093/nar/gkac1052,
       author = {The UniProt Consortium},
       title = {UniProt - the Universal Protein Knowledgebase in 2023},
       journal = {Nucleic Acids Research},
@@ -35,9 +36,9 @@ bibtex:
       doi = {10.1093/nar/gkac1052},
       url = {https://doi.org/10.1093/nar/gkac1052}}
 templates:
-  - |-
-    User - Describe the {sentences__names__noun} of the {#protein|amino-acid sequence|AA sequence|polypeptide!} {sequence#}?
-    Assistant - {sentences#}.
-  - |-
-    User : What bio-chemical reactions can be catalyzed by the following {#protein|amino-acid sequence|AA sequence|polypeptide!}?
-    Assistant: The bio-chemical reactions that can be catalyzed by the given sequence are: {reactions#}
+    - |-
+      User: Describe the {sentences__names__noun} of the {#protein|amino-acid sequence|AA sequence|polypeptide!} {sequence#}?
+      Assistant: {sentences#}.
+    - |-
+      User: What biochemical reactions can be catalyzed by the following {#protein|amino-acid sequence|AA sequence|polypeptide!}?
+      Assistant: The biochemical reactions that can be catalyzed by the given sequence are: {reactions#}
